# SketchOnFace

./: .gitignore  CLAUDE.md  MULTI_FACE_IMPLEMENTATION.md  Makefile  README.md  SketchOnFace.manifest  SketchOnFace.py  pyproject.toml
.github/workflows/: test.yml
commands/: __init__.py  compute_handler.py  edit_command.py  wrap_command.py
core/: __init__.py  coordinate_mapper.py  curve_generator.py  logger.py  sketch_parser.py  surface_analyzer.py
resources/: README.md
tests/: __init__.py  conftest.py  test_coordinate_mapper.py  test_curve_generator.py  test_sketch_parser.py  test_surface_analyzer.py
tests/mocks/: __init__.py  adsk_mock.py
