[project]
name = "SketchOnFace"
version = "1.0.0"
requires-python = ">=3.9"
description = "Fusion 360 add-in that wraps 2D sketch curves onto arbitrary 3D surfaces"

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]

[tool.ruff]
target-version = "py39"
exclude = [
    "resources",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "D203",    # no-blank-line-before-class (incompatible with formatter)
    "D212",    # multi-line-summary-first-line (incompatible with formatter)
    "COM812",  # incompatible with formatter
    "ISC001",  # incompatible with formatter
    # Fusion 360 add-in specific ignores:
    "ANN001",  # Missing type annotation for function argument (Fusion API types aren't standard)
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "ANN205",  # Missing return type annotation for staticmethod
    "ANN206",  # Missing return type annotation for classmethod
    "ARG001",  # Unused function argument (Fusion API requires context param)
    "ARG002",  # Unused method argument
    "BLE001",  # Do not catch blind exception (required for Fusion error handling)
    "E722",    # Do not use bare except (required for Fusion error handling)
    "PLW0603", # Using global statement (required pattern for Fusion add-ins)
    "S110",    # try-except-pass detected (intentional in Fusion add-ins)
    "D100",    # Missing docstring in public module
    "D102",    # Missing docstring in public method (event handler methods)
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    "D205",    # 1 blank line between summary and description
    "D401",    # First line imperative mood
    "T201",    # print found (used for Fusion Text Commands output)
    "ERA001",  # Found commented-out code (false positives on author credits)
    "EXE002",  # File is executable but no shebang (not needed for Fusion add-ins)
    "TID252",  # Prefer absolute imports (relative imports work fine in Fusion add-ins)
    "SIM105",  # Use contextlib.suppress (not always clearer)
    "PERF401", # Use list comprehension (sometimes for loop is clearer)
    "PLR2004", # Magic value in comparison (overly pedantic)
    "PLR0913", # Too many arguments (required for data classes)
    "FBT003",  # Boolean positional value in function call
    "EM101",   # Exception must not use string literal
    "TRY003",  # Avoid specifying long messages outside exception class
    "PLC0415", # import should be at top level (local imports sometimes needed)
    "SIM108",  # Use ternary (explicit if-else often clearer)
    "D417",    # Missing argument description in docstring
    "E501",    # Line too long (handled by formatter, many false positives in Fusion)
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
